--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.2.10
+confusable-homoglyphs==3.2.0
 Django==3.1.1
+django-registration==3.1
 env==0.1.0
 environs==8.0.0
 marshmallow==3.8.0
