--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.2.10
 confusable-homoglyphs==3.2.0
 Django==3.1.1
+django-heroku==0.3.1
 django-registration==3.1
 env==0.1.0
 environs==8.0.0
+gunicorn==20.0.4
 marshmallow==3.8.0
 psycopg2-binary==2.8.6
 python-dotenv==0.14.0
 pytz==2020.1
 sqlparse==0.3.1
+whitenoise==5.2.0
